@@ -10,6 +10,7 @@ ncmpc 0.50 - not yet released
 * lyrics/google: fix partial loading of lyrics
 * support MPD 0.22 tag "label" (requires libmpdclient 2.17)
 * fix config file overriding MPD_HOST environment variable
+* click on progress bar seeks current song
 
 ncmpc 0.49 - (2023-08-04)
 * fix UI freeze if lyrics plugin is stuck
